# oerperl-MySQL

./: BUGREPORTING  CHANGELOG  ChangeLog.oerperl+MySQL  HELP  INSTALL  Makefile.in  PORTING  README.md  README.oer  README.oerperl+MySQL  SCRIPTING  SYNCGUIDE  THANKS  TODO  UPGRADING  acconfig.h  config.h.in  configure  configure.in  ds.c  ds.h  misc.c  misc.h  mycrypt.c  network.c  network.h  oer+MySQL-common.h  oer+MySQL.c  oer+MySQL.h  parse.c  parse.h  perl.c  perl.h  pre_install.sh  reg.c  reg.h
scripts/: add_keys.sql  bantype.sql  fix_18.sql  fix_19.sql  fix_20.sql  fix_22.sql  fix_25.sql  fix_26.sql  fix_28.sql  fix_34.sql  fix_35.sql  fix_36.sql  initial.sql  kickreasons.txt  oer_last_yourchannel.sql  oer_seen_yourchannel.sql
tools/: README  adminmove.pl  changeident.pl  delchannel.pl  delident.pl  delsyncdata.pl  last2mysql.pl  logconv.pl  seen2mysql.pl  upgrade.pl  usermove.pl
